// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReceiptsPage > Snapshot Tests - Empty State > matches snapshot with no receipts on desktop 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  text-center"
        >
          <div
            class="py-8"
          >
            <div
              class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-gray-100 dark:bg-gray-800 mb-4"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-receipt h-8 w-8 text-gray-400 dark:text-gray-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
                />
                <path
                  d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
                />
                <path
                  d="M12 17.5v-11"
                />
              </svg>
            </div>
            <h3
              class="text-lg font-semibold text-gray-900 dark:text-white mb-2"
            >
              No receipts yet
            </h3>
            <p
              class="text-gray-600 dark:text-gray-400 mb-4"
            >
              Upload your first receipt to get started
            </p>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Upload Receipt
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - Empty State > matches snapshot with no receipts on mobile 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  text-center"
        >
          <div
            class="py-8"
          >
            <div
              class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-gray-100 dark:bg-gray-800 mb-4"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-receipt h-8 w-8 text-gray-400 dark:text-gray-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
                />
                <path
                  d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
                />
                <path
                  d="M12 17.5v-11"
                />
              </svg>
            </div>
            <h3
              class="text-lg font-semibold text-gray-900 dark:text-white mb-2"
            >
              No receipts yet
            </h3>
            <p
              class="text-gray-600 dark:text-gray-400 mb-4"
            >
              Upload your first receipt to get started
            </p>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Upload Receipt
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - Error State > matches snapshot with error state 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-lg p-4 "
        >
          <div
            class="flex items-start gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-alert h-5 w-5 text-red-600 dark:text-red-400 shrink-0 mt-0.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="16"
                y2="16"
              />
            </svg>
            <div
              class="flex-1"
            >
              <h4
                class="text-sm font-semibold text-red-800 dark:text-red-300 mb-1"
              >
                Failed to Load Receipts
              </h4>
              <p
                class="text-sm text-red-700 dark:text-red-400"
              >
                Failed to load receipts
              </p>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - Loading State > matches snapshot with loading state on desktop 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - Loading State > matches snapshot with loading state on mobile 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
          <div
            class="animate-pulse bg-gray-200 dark:bg-gray-700 rounded h-32"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - With Data > matches snapshot on desktop (1280px) 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <a
            data-discover="true"
            href="/receipts/1"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Grocery Store"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt1.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Grocery Store
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      Ready
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 15, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $125.50
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            data-discover="true"
            href="/receipts/2"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Restaurant"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt2.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Restaurant
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      OcrInProgress
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 14, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $85.75
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - With Data > matches snapshot on mobile (375px) 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <a
            data-discover="true"
            href="/receipts/1"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Grocery Store"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt1.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Grocery Store
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      Ready
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 15, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $125.50
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            data-discover="true"
            href="/receipts/2"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Restaurant"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt2.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Restaurant
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      OcrInProgress
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 14, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $85.75
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ReceiptsPage > Snapshot Tests - With Data > matches snapshot on tablet (768px) 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900"
  >
    <header
      class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 sticky top-0 z-40"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 text-xl font-bold text-primary-600 dark:text-primary-400"
            data-discover="true"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v20l2-1 2 1 2-1 2 1 2-1 2 1 2-1 2 1V2l-2 1-2-1-2 1-2-1-2 1-2-1-2 1Z"
              />
              <path
                d="M16 8h-6a2 2 0 1 0 0 4h4a2 2 0 1 1 0 4H8"
              />
              <path
                d="M12 17.5v-11"
              />
            </svg>
            <span>
              Splittat
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-4"
          >
            <button
              aria-label="Toggle dark mode"
              class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-moon h-5 w-5 text-gray-700 dark:text-gray-300"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
                />
              </svg>
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 hover:bg-gray-100 focus:ring-gray-500 dark:text-gray-300 dark:hover:bg-gray-800 px-3 py-1.5 text-sm  "
            >
              Login
            </button>
            <button
              class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-3 py-1.5 text-sm  "
            >
              Sign Up
            </button>
          </div>
          <button
            aria-label="Toggle menu"
            class="md:hidden p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-menu h-6 w-6 text-gray-700 dark:text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 5h16"
              />
              <path
                d="M4 12h16"
              />
              <path
                d="M4 19h16"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="flex justify-between items-center mb-6"
        >
          <h1
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            My Receipts
          </h1>
          <button
            class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base  gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            New Receipt
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <a
            data-discover="true"
            href="/receipts/1"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Grocery Store"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt1.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Grocery Store
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      Ready
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 15, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $125.50
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            data-discover="true"
            href="/receipts/2"
          >
            <div
              class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm   hover:shadow-lg transition-shadow cursor-pointer"
            >
              <div
                class="flex gap-4 p-4"
              >
                <div
                  class="shrink-0"
                >
                  <img
                    alt="Receipt from Restaurant"
                    class="w-20 h-20 object-cover rounded border border-gray-200 dark:border-gray-700"
                    src="https://example.com/receipt2.jpg"
                  />
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-start justify-between gap-2 mb-2"
                  >
                    <h3
                      class="text-lg font-semibold text-gray-900 dark:text-white truncate"
                    >
                      Restaurant
                    </h3>
                    <span
                      data-testid="status-badge"
                    >
                      OcrInProgress
                    </span>
                  </div>
                  <div
                    class="flex flex-wrap gap-4 text-sm text-gray-600 dark:text-gray-400"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-calendar h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                      </svg>
                      <span>
                        Jan 14, 2024
                      </span>
                    </div>
                    <div
                      class="flex items-center gap-1"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-dollar-sign h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="2"
                          y2="22"
                        />
                        <path
                          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                        />
                      </svg>
                      <span
                        class="font-semibold text-gray-900 dark:text-white"
                      >
                        $85.75
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;
